# tigs

./: .gitignore  LICENSE  README.md  pyproject.toml  run_python.sh  run_tests.sh
.github/workflows/: ci.yml
changes/add-specs-management/: proposal.md  tasks.md
changes/add-specs-management/capabilities/specs-management/: spec.md
python/: .gitignore  README.md  VERIFICATION_ISSUE_14.md  VERIFICATION_ISSUE_15.md  VERIFICATION_ISSUE_16.md  pyproject.toml
python/src/: __init__.py  chat_providers.py  cli.py  notes_merger.py  storage.py  store.py
python/src/specs_manager/: __init__.py  config.py  core.py  structure_loader.py
python/src/specs_manager/parsers/: __init__.py  api_merger.py  api_parser.py  architecture_merger.py  architecture_parser.py  capability_merger.py  capability_parser.py  data_model_merger.py  data_model_parser.py
python/src/specs_manager/templates/: AGENTS_template.md  README_template.md  api_template.md  architecture_template.md  data_model_template.md
python/src/specs_manager/templates/commands/: archive.md  change.md  new-spec.md  tigs::commit.md  validate.md
python/src/specs_manager/templates/structures/embedded-system/: archive.md  bootstrap.md  change.md  structure.yaml  validate.md
python/src/specs_manager/templates/structures/pipeline/: archive.md  bootstrap.md  change.md  structure.yaml  validate.md
python/src/specs_manager/templates/structures/web-app/: bootstrap.md  structure.yaml
python/src/specs_manager/templates/structures/web-app/examples/: capabilities_example.md
python/src/specs_manager/validators/: __init__.py  api_validator.py  architecture_validator.py  base.py  capability_validator.py  data_model_validator.py
python/src/tui/: __init__.py  ansi_app.py  app.py  chat_display.py  chat_view.py  color_constants.py  commit_details_view.py  commits.py  commits_view.py  indicators.py  layout.py  layout_manager.py  log_app.py  logs.py  logs_view.py  messages.py  messages_view.py  pane_renderer.py  panes.py  protocols.py  scrollable.py  scrollable_mixin.py  selection_mixin.py  sessions_view.py  simple_app.py  store_app.py  text_utils.py  view_app.py  view_scroll_mixin.py
python/tests/: __init__.py  conftest.py  mock_sessions.py  test_chat_providers.py  test_cli_delete.py  test_cli_errors.py  test_cli_integration.py  test_cli_retrieve.py  test_cli_store.py  test_cli_sync.py  test_cligent_integration.py  test_commit_details_colors.py  test_commit_details_colors_comprehensive.py  test_commit_details_cursor_change.py  test_commit_details_edge_cases.py  test_commit_message_with_pipe.py  test_commits_status_footer.py  test_commits_view_colors.py  test_cursor_frame_delay.py  test_e2e_workflows.py  test_indicators.py  test_layout.py  test_log_commits_colors.py  test_log_integration.py  test_logs_status_footer.py  test_message_wrapping.py  test_messages_status_footer.py  test_messages_view_colors.py  test_pane_renderer.py  test_rename_zero_changes.py  test_scrollable.py  test_store_integration.py  test_store_operation.py  test_tui_commits.py  test_tui_messages.py  test_tui_store_e2e.py  test_view_commits_colors.py  test_view_integration.py  test_view_scroll_mixin.py  test_visual_selection.py  (+1 more)
python/tig/: __init__.py  cli.py  store.py
specs/dev/: chat_format.md  rules.md  testing.md
tests/: README.md  conftest.py  test_commit_navigation.py  tui.py
tests/cli/: __init__.py  test_crud.py  test_errors.py  test_sync.py  test_workflows.py  test_yaml_validation.py
tests/e2e/: README.md  __init__.py  conftest.py  verify_framework.py
tests/e2e/framework/: __init__.py  assertions.py  display.py  terminal.py  utils.py
tests/framework/: __init__.py  fixtures.py  mock_claude_logs.py  mock_codex_logs.py  paths.py  tui.py
tests/integration/: __init__.py  test_complete_workflow.py
tests/log/: __init__.py  test_boot.py  test_chat_integration.py  test_display.py  test_edge_cases.py  test_navigation.py  test_scrolling.py
tests/store/: __init__.py  test_boot.py  test_boot_layout.py  test_commits.py  test_cursor_scrolling.py  test_edge_cases.py  test_messages.py  test_overwrite.py  test_repo_edge_cases.py  test_sessions.py  test_storage.py  test_validation.py  test_visual_selection.py
tests/store/commits/: __init__.py  test_display.py  test_edge_cases.py  test_navigation.py  test_selection.py  test_status_footer.py
tests/store/logs/: test_navigation.py  test_provider_labels.py  test_providers.py
tests/store/messages/: test_display.py  test_selection.py  test_status_footer.py
tests/store/sessions/: test_navigation.py
tests/view/: __init__.py  test_boot.py  test_chat_integration.py  test_display.py  test_edge_cases.py  test_navigation.py  test_scrolling.py  test_status_footer.py
