[project]
name = "tigs"
version = "0.1.0"
description = "Talks in Git → Specs - Store and manage text objects in Git repositories"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "WellDefined AI", email = "info@welldefined.ai"},
]
keywords = ["git", "chat", "conversation", "version-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "click>=8.0",
    "gitpython>=3.1.30",
]

[project.urls]
Homepage = "https://github.com/welldefined-ai/tigs"
Repository = "https://github.com/welldefined-ai/tigs"
Issues = "https://github.com/welldefined-ai/tigs/issues"

[project.scripts]
tigs = "tigs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src" = "tigs"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 88
target-version = "py38"