[project]
name = "tigs"
version = "0.1.1"
description = "Talks in Git → Specs - Git-based chat management system for AI-assisted software development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
authors = [
    {name = "SubLang Community", email = "hi@sublang.ai"},
]
keywords = ["git", "chat", "version-control", "ai", "llm", "chatgpt", "claude", "gemini", "qwen", "specifications", "specs", "vibe-coding", "software-development", "spec-driven", "prompts", "development-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Documentation",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0",
    "gitpython>=3.1.30",
    "cligent>=0.1.2",
    "wcwidth>=0.2.13",
    "pytest-timeout>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/sublang-ai/tigs"
Repository = "https://github.com/sublang-ai/tigs"
Issues = "https://github.com/sublang-ai/tigs/issues"
Discord = "https://discord.gg/8krkc4z5wK"

[project.scripts]
tigs = "tigs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src" = "tigs"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
    "wcwidth>=0.2.13",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--color=yes",
]
